add basic graphics

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -1,16 +1,30 @@
-# ROM configuration
-mapper = nrom
+# Configuration file for nesfab-specific options
 
-# outputs
+# ROM CONFIG
+mapper = cnrom
+prg-size = 32
+chr-size = 16
+
+# OUTPUTS
 output = build/nestris.nes
 mlb = build/nestris.mlb
 ctags = .tags
 
-threads = 8
-
-# Import directories
+# IMPORT DIRECTORIES
 nesfab-dir = nesfab/
 code-dir = src/
+resource-dir = skins/
 
-# input files
+# MISC
+threads = 8
+
+# INPUT FILES
+input = config.fab
+
+# source code
 input = main.fab
+input = gfx_data.macrofab
+input = gfx.fab
+
+# lib
+input = lib/nes.fab
