--- a/nestris.cfg
+++ b/nestris.cfg
@@ -17,16 +17,23 @@ resource-dir = skins/
 
 # MISC
 threads = 8
+controllers = 1
 
 # INPUT FILES
 input = config.fab
 
 # source code
 input = main.fab
+input = constants.fab
 input = gfx_data.macrofab
 input = gfx.fab
+input = nmi_render.fab
 
 input = legal/main.fab
 
+input = title/main.fab
+input = type_menu/main.fab
+
 # lib
 input = lib/nes.fab
+input = lib/mapper/mmc1.fab
