scaffold more modes

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -33,6 +33,8 @@ input = legal/main.fab
 
 input = title/main.fab
 input = type_menu/main.fab
+input = level_menu/main.fab
+input = game/main.fab
 
 # lib
 input = lib/nes.fab
