finish type menu

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -25,7 +25,7 @@ input = config.fab
 # source code
 input = main.fab
 input = constants.fab
-input = gfx_data.macrofab
+input = skin.macrofab
 input = gfx.fab
 input = nmi_render.fab
 
