init actual game stuff

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -32,9 +32,13 @@ input = nmi_render.fab
 input = legal/main.fab
 
 input = title/main.fab
+
 input = type_menu/main.fab
+
 input = level_menu/main.fab
+
 input = game/main.fab
+input = game/piece.fab
 
 # lib
 input = lib/nes.fab
