way too much game logic

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -28,6 +28,7 @@ input = constants.fab
 input = skin.macrofab
 input = gfx.fab
 input = nmi_render.fab
+input = audio.fab
 
 input = legal/main.fab
 
@@ -39,6 +40,9 @@ input = level_menu/main.fab
 
 input = game/main.fab
 input = game/piece.fab
+input = game/player.fab
+input = game/play.fab
+input = game/stats.fab
 
 # lib
 input = lib/nes.fab
