finish core game logic

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -40,7 +40,7 @@ input = level_menu/main.fab
 
 input = game/main.fab
 input = game/piece.fab
-input = game/player.fab
+input = game/actions.fab
 input = game/play.fab
 input = game/stats.fab
 
