game is almost playable

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -29,6 +29,7 @@ input = skin.macrofab
 input = gfx.fab
 input = nmi_render.fab
 input = audio.fab
+input = sprite.fab
 
 input = legal/main.fab
 
@@ -43,6 +44,7 @@ input = game/piece.fab
 input = game/actions.fab
 input = game/play.fab
 input = game/stats.fab
+input = game/board.fab
 
 # lib
 input = lib/nes.fab
