finish curtain logic

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -39,6 +39,8 @@ input = type_menu/main.fab
 
 input = level_menu/main.fab
 
+input = victory/main.fab
+
 input = game/main.fab
 input = game/piece.fab
 input = game/actions.fab
