add sound effects omgggg

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -51,4 +51,4 @@ input = game/board.fab
 # lib
 input = lib/nes.fab
 input = lib/mapper/mmc1.fab
-input = lib/audio/puf1.fab
+input = lib/audio/apu.fab
