implement logic for high score screen

--- a/nestris.cfg
+++ b/nestris.cfg
@@ -41,6 +41,8 @@ input = level_menu/main.fab
 
 input = victory/main.fab
 
+input = high_score_entry/main.fab
+
 input = game/main.fab
 input = game/piece.fab
 input = game/actions.fab
